[project]
name = "elevator-scheduling"
version = "0.1.0"
description = ""
authors = [
    {name = "Li Kehang",email = "2353146641@qq.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elevator-py (==0.0.8)",
    "pyqt6 (>=6.6.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
